# android_ros_model_car

./: README.md
car_control/: CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
car_control/freieCar/: build.gradle
car_control/freieCar/src/main/: AndroidManifest.xml
car_control/freieCar/src/main/java/com/github/turtlebot/turtlebot_android/freieCar/: FreieCarActivity.java  ModelCarActivity.java  ScaledBitmapFromCompressedImage.java
car_control/freieCar/src/main/java/com/github/turtlebot/turtlebot_android/freieCar/view/: ControlFragment.java  ViewPagerAdapter.java  VisualGPSFragment.java
car_control/freieCar/src/main/res/layout-land/: main.xml  visual_gps.xml
car_control/freieCar/src/main/res/layout-port/: main.xml  visual_gps.xml
car_control/freieCar/src/main/res/values/: strings.xml
car_control/modelCar/: build.gradle
car_control/modelCar/src/main/: AndroidManifest.xml
car_control/modelCar/src/main/java/com/github/turtlebot/turtlebot_android/modelCar/: ModelCarActivity.java  ScaledBitmapFromCompressedImage.java
car_control/modelCar/src/main/java/com/github/turtlebot/turtlebot_android/modelCar/view/: ControlFragment.java  ViewPagerAdapter.java  VisualGPSFragment.java
car_control/modelCar/src/main/res/layout-land/: main.xml  visual_gps.xml
car_control/modelCar/src/main/res/layout-port/: main.xml  visual_gps.xml
car_control/modelCar/src/main/res/values/: strings.xml
car_localization/: .gitignore  CMakeLists.txt  build.gradle  package.xml
freie_model_car_ros_android/: settings.gradle
sample_app/: AndroidManifest.xml  (+3 more)
(+47 files in other folders)
